--- a/templates/instagramapp/base.html
+++ b/templates/instagramapp/base.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="{% static 'css/base.css' %}" />
     <link rel="stylesheet" href="{% static 'css/profile-style.css' %}" />
     <link rel="stylesheet" href="{% static 'css/explore-friends-style.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/home-style.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/view-post-style.css' %}" />
     <title>Document</title>
 </head>
 
