--- a/static/css/explore-friends-style.css
+++ b/static/css/explore-friends-style.css
@@ -11,7 +11,6 @@ section.all button {
 section.all div {
   font-size: large;
   margin-bottom: 30px;
-  margin-top: auto;
 }
 
 section.all .main-container {
@@ -27,7 +26,7 @@ section.all .container {
 }
 section .container .uname {
   text-align: center;
-  margin-top: auto;
+  padding: 0.5em 1em;
 }
 
 section.all .container .following,
