--- a/templates/instagramapp/base.html
+++ b/templates/instagramapp/base.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="{% static 'css/explore-friends-style.css' %}" />
     <link rel="stylesheet" href="{% static 'css/home-style.css' %}" />
     <link rel="stylesheet" href="{% static 'css/view-post-style.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/view-following-style.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/view-followers-style.css' %}" />
     <title>Document</title>
 </head>
 
