--- a/templates/instagramapp/explore-friends.html
+++ b/templates/instagramapp/explore-friends.html
@@ -35,7 +35,81 @@
             {% endfor %}
             {% endif %}
         </div>
+    </div>
+</section>
 
+
+<section class="home-post">
+    <div class="container">
+        {% for post in posts %}
+        <div class="item-container">
+            <div class="user-name">
+                <div class="profile-pic">
+                    <button>
+                        <a href="{% url 'profile' post.user.user_name %}">
+                            <i class="fa fa-user-circle"></i>
+                        </a>
+                    </button>
+                </div>
+                <div class="profile-info">
+                    {{post.user.user_name}}<br>
+                    {{post.created}}
+                </div>
+
+                <div class="unfollow">
+                    {% if post.user not in following_user_objects %}
+                    <a href="{% url 'follow' post.user.user_name %}">
+                        <button>
+                            follow
+                        </button>
+                    </a>
+                    {% else %}
+                    <a href="{% url 'unfollow' post.user.user_name %}">
+                        <button>
+                            unfollow
+                        </button>
+                    </a>
+                    {% endif %}
+                </div>
+            </div>
+            <div>
+                <div class="img">
+                    <a href="{% url 'viewpost' post.pk %}">
+                        <button>
+                            <img src="{{ post.post.url }}" alt="img" width="100%"><br>
+                        </button>
+                    </a>
+                </div>
+                <!-- <img src="{{ post.post.url }}" alt="img"><br> -->
+                <!-- action="{% url 'like' post.pk %}" -->
+                <div class="like">
+                    <form method="POST">
+                        {% csrf_token %}
+                        <button type=" submit" name="post_pk" value="{{ post.pk }}">
+                            {% if session_user  not in post.likes.all %}
+                            <i class='fa fa-heart-o' style='font-size:24px'></i>
+                            {% else %}
+                            <i class="fa fa-heart" style="font-size: 24px;"></i>
+                            {% endif %}
+                        </button>
+                    </form>
+                </div>
+                <div class="likes-count">
+                    {{ post.likes.count }} likes
+                </div>
+                {% if post.location  %}
+                <div class=" location">
+                    {{post.location}}
+                </div>
+                {% endif %}
+                {% if post.description %}
+                <div class="description">
+                    {{post.description}}
+                </div>
+                {% endif %}
+            </div>
+        </div>
+        {% endfor %}
     </div>
 </section>
 {% endblock %}
