--- a/templates/instagramapp/view-post.html
+++ b/templates/instagramapp/view-post.html
@@ -12,8 +12,23 @@
                 </a>
                 {% endif %}
             </div>
+            <!-- action="{% url 'like' post.pk %}" -->
+            <div class="like">
+                <form method="POST">
+                    {% csrf_token %}
+                    <button type=" submit" name="post_pk" value="{{ post.pk }}">
+                        {% if session_user  not in post.likes.all %}
+                        <i class='fa fa-heart-o' style='font-size:24px'></i>
+                        {% else %}
+                        <i class="fa fa-heart" style="font-size: 24px;"></i>
+                        {% endif %}
+                    </button>
+                </form>
+            </div>
+            <div class="likes-count">
+                {{ post.likes.count }} likes
+            </div>
         </div>
-
         <div class="comments">
             <p>Comments section</p>
             <h1>{{post.post.location}}</h1>
@@ -21,6 +36,5 @@
             <h1></h1>
         </div>
     </div>
-
 </section>
 {% endblock %}
