--- a/static/css/explore-friends-style.css
+++ b/static/css/explore-friends-style.css
@@ -1,16 +1,20 @@
 section {
   margin-top: 50px;
-  margin-left: 50px;
 }
 section.all button {
-  background-color: cornflowerblue;
-  padding: 0.5em 2em;
-  margin-left: 10px;
+  padding: 0.5em 1em;
+  background-color: rgb(59, 127, 237);
+  border-radius: 5px;
+  border: 0px;
+  font-size: 14px;
+  cursor: pointer;
+  color: white;
+  box-sizing: border-box;
 }
 
 section.all div {
   font-size: large;
-  margin-bottom: 30px;
+  margin-bottom: 10px;
 }
 
 section.all .main-container {
@@ -83,10 +87,14 @@ section.home-post .user-name .unfollow {
 }
 
 section.home-post .user-name .unfollow button {
-  background-color: aqua;
-  color: black;
-  border: 0px;
   padding: 0.5em 1em;
+  background-color: rgb(59, 127, 237);
+  border-radius: 5px;
+  border: 0px;
+  font-size: 14px;
+  cursor: pointer;
+  color: white;
+  box-sizing: border-box;
 }
 
 section.home-post .img button {
@@ -100,4 +108,24 @@ section.home-post button[name="post_pk"] {
 section.home-post .likes-count {
   font-weight: 600;
   color: #262626;
+}
+
+section.test .main-container {
+  display: grid;
+  row-gap: 10px;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-auto-rows: 300px;
+  margin: 0px 10%;
+}
+
+section.test .main-container .item img {
+  width: 100%;
+  height: 100%;
+  border-radius: 20px;
+}
+
+section.test .main-container .item button {
+  width: 100%;
+  height: 100%;
+  border: 0px;
 }
