--- a/static/css/home-style.css
+++ b/static/css/home-style.css
@@ -1,11 +1,14 @@
 section.home-post .container {
   grid-template-columns: 1fr;
   display: grid;
-  row-gap: 30px;
+  row-gap: 50px;
   width: 500px;
   margin: auto;
 }
 
+section {
+  margin-left: 0px;
+}
 /* section.home-post .container {
 } */
 
@@ -16,23 +19,27 @@ section.home-post .item-container {
 
 section.home-post img {
   width: 100%;
-  height: auto;
+  height: 500px;
+  border-radius: 20px;
 }
 
 section.home-post .user-name {
   display: grid;
   grid-template-columns: 40px auto auto;
   column-gap: 10px;
+  font-size: 14px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
 section.home-post .user-name .profile-pic .fa {
-  font-size: 26px;
+  font-size: 34px;
 }
 section.home-post .user-name .profile-pic {
   margin: auto;
 }
 
 section.home-post .user-name a {
-  background-color: white;
+  background-color: inherit;
   text-decoration: none;
   color: black;
 }
@@ -42,25 +49,138 @@ section.home-post .user-name .profile-pic button {
 
 section.home-post .user-name .unfollow {
   text-align: right;
-  margin-top: auto;
+  margin: 10px;
 }
 
 section.home-post .user-name .unfollow button {
-  background-color: aqua;
-  color: black;
+  background-color: rgb(0, 149, 246);
+  color: white;
   border: 0px;
   padding: 0.5em 1em;
+  border-radius: 5px;
+  box-sizing: border-box;
+  margin-right: 1em;
 }
 
 section.home-post .img button {
   width: 100%;
   border: 0px;
+  border-radius: 20px;
 }
 section.home-post button[name="post_pk"] {
   border: 0px;
 }
 
 section.home-post .likes-count {
-  font-weight: 600;
+  font-weight: 400;
   color: #262626;
+  font-size: 12px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+}
+
+/* Suggestions Container */
+section.home-post .suggestions-container {
+  background-color: white;
+  width: 700px;
+  margin: 0px auto;
+}
+section.home-post .suggestions {
+  display: grid;
+  row-gap: 40px;
+  padding: 50px 30px;
+  margin: 40px auto;
+}
+
+section.home-post .suggestions .user {
+  display: grid;
+  grid-template-columns: auto 2fr auto;
+  column-gap: 20px;
+}
+
+section.home-post .suggestions .user .profile-pic .fa {
+  font-size: 30px;
+}
+
+section.home-post .suggestions .user .profile-pic a {
+  color: black;
+}
+
+section.home-post .suggestions .user .profile-pic button {
+  border: 0px;
+  background-color: inherit;
+  height: 100%;
+  width: 100%;
+}
+
+section.home-post .suggestions .user .follow button {
+  padding: 0.5em 1em;
+  background-color: rgb(59, 127, 237);
+  border-radius: 5px;
+  border: 0px;
+  font-size: 16px;
+  cursor: pointer;
+  color: white;
+  box-sizing: border-box;
+}
+
+section.home-post .suggestions .user .follow {
+  text-align: right;
+  margin: auto 0px;
+}
+
+section.home-post .suggestions .user-name {
+  font-size: large;
+  display: unset;
+  margin: auto 0px;
+  overflow: hidden;
+  font-weight: 600;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+}
+
+section.home-post .suggestions .full-name {
+  font-weight: 400;
+  color: rgb(142, 142, 142);
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+}
+
+section.home-post .suggestions .user-name-info {
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+}
+section.home-post .suggestions-head {
+  width: 700px;
+  margin: auto;
+  font: inherit;
+  font-size: larger;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+}
+h4 {
+  font-weight: 500;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+}
+
+@media screen and (max-width: 700px) {
+  section.home-post .suggestions-container {
+    width: 100%;
+  }
+}
+
+section.home-post .like-comment-share {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  width: 150px;
+  margin-top: 10px;
+}
+
+section.home-post .like-comment-share .comment button {
+  border: 0px;
+}
+
+section.home-post .like-comment-share .share button {
+  border: 0px;
 }
