--- a/static/css/profile-style.css
+++ b/static/css/profile-style.css
@@ -15,13 +15,13 @@ section.main .follow-info {
 
 section.main .following button {
   border: 0px;
-  background-color: rgb(230, 230, 230);
+  background-color: inherit;
   font-size: large;
 }
 
 section.main .followers button {
   border: 0px;
-  background-color: rgb(230, 230, 230);
+  background-color: inherit;
   font-size: large;
 }
 
@@ -52,12 +52,19 @@ section.main .user-info {
 
 section.main .image {
   text-align: center;
-  margin-top: auto;
+}
+
+section.main .image button {
+  height: 100%;
+  width: 100%;
+  border-radius: 50%;
+  border: 0px;
 }
 
 section.main .image img {
   width: 100%;
   height: 100%;
+  border-radius: 50%;
 }
 
 section.my-post .container {
@@ -71,6 +78,7 @@ section.my-post .container button {
   width: 100%;
   height: 100%;
   border: 0px;
+  border-radius: 20px;
 }
 
 section.my-post .container .item {
@@ -81,6 +89,11 @@ section.my-post .container .item {
 section.my-post img {
   width: 100%;
   height: 100%;
+  border-radius: 20px;
+}
+
+hr {
+  margin: 0px 10%;
 }
 
 @media screen and (max-width: 800px) {
