--- a/static/css/view-post-style.css
+++ b/static/css/view-post-style.css
@@ -3,6 +3,7 @@ section.view-post .container {
   grid-template-columns: 1fr 1fr;
   margin: 50px 10%;
   column-gap: 0px;
+  grid-auto-rows: 500px;
 }
 
 section.view-post .container .img {
@@ -10,12 +11,17 @@ section.view-post .container .img {
 }
 section.view-post .container img {
   width: 100%;
-  height: auto;
+  height: 100%;
+  border-radius: 20px;
 }
 
 section.view-post .container .comments {
   background-color: white;
   text-align: center;
+  /* position: relative; */
+  display: grid;
+  grid-template-rows: auto 5fr auto;
+  align-content: center;
 }
 
 section.view-post .delete {
@@ -27,7 +33,155 @@ section.view-post .delete {
   top: 0px;
 }
 section.view-post .delete button {
-  background-color: red;
+  background-color: gray;
   color: black;
   padding: 0.5em 2em;
+  border: 0px;
+  border-radius: 10px;
+}
+
+section.view-post .like button {
+  border: 0px;
+  margin-bottom: 10px;
+  background-color: white;
+}
+
+section.view-post .like button:hover {
+  background-color: white;
+}
+
+section.view-post button:hover {
+  cursor: pointer;
+}
+
+section.view-post .likes-count {
+  font-size: 12px;
+}
+
+section.view-post .comments .uinfo {
+  /* position: absolute; */
+  top: 30px;
+  display: grid;
+  grid-template-columns: auto 2fr auto;
+  left: 20px;
+  width: 90%;
+  text-align: left;
+  column-gap: 20px;
+  margin-left: 10px;
+  margin-top: 20px;
+}
+
+section.view-post .comments .profile-pic .fa {
+  font-size: 26px;
+}
+
+section.view-post .comments .profile-pic button {
+  background-color: inherit;
+  border: 0px;
+}
+
+section.view-post .comments .profile-pic a {
+  color: #262626;
+}
+
+section.view-post .comments .profile-pic {
+  margin: auto;
+}
+section.view-post .comments .uinfo .user-name-info {
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  font-size: 13px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+}
+
+section.view-post .comments .uinfo .follow button {
+  background-color: rgb(0, 149, 246);
+  color: white;
+  border: 0px;
+  padding: 0.5em 1em;
+  border-radius: 5px;
+  box-sizing: border-box;
+  margin-right: 1em;
+}
+
+section.view-post .like-comment-share {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  width: 90%;
+  margin-top: 10px;
+}
+
+section.view-post .like-comment-share .comment button {
+  border: 0px;
+  background-color: white;
+}
+
+section.view-post .like-comment-share .share button {
+  border: 0px;
+  background-color: white;
+}
+
+section.view-post .like-p {
+  /* position: absolute; */
+  text-align: left;
+  margin-left: 10px;
+  grid-row-start: 3;
+}
+
+section.related-posts .related-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  /* width: 800px; */
+  margin: 0px 10%;
+  grid-auto-rows: 250px;
+  column-gap: 10px;
+  row-gap: 20px;
+}
+
+section.related-posts .related-container img {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+}
+
+section.related-posts .related-container button {
+  border: 0px;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+}
+
+section.related-posts .content {
+  text-align: center;
+}
+
+/* User info section in-side of the comments */
+
+@media screen and (max-width: 800px) {
+  section.related-posts .related-container {
+    grid-template-columns: 1fr 1fr;
+    width: 100%;
+    margin: 0px 20px;
+    column-gap: 10px;
+    row-gap: 10px;
+    box-sizing: border-box;
+  }
+  section.related-posts {
+    margin-right: 30px;
+    box-sizing: border-box;
+  }
+  section.view-post .container {
+    grid-template-columns: 1fr;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  section.related-posts .related-container {
+    grid-template-columns: 1fr;
+  }
+}
+
+.fa {
+  font: normal normal normal 22px/1 FontAwesome;
 }
