--- a/templates/instagramapp/base.html
+++ b/templates/instagramapp/base.html
@@ -14,6 +14,11 @@
     <link rel="stylesheet" href="{% static 'css/view-post-style.css' %}" />
     <link rel="stylesheet" href="{% static 'css/view-following-style.css' %}" />
     <link rel="stylesheet" href="{% static 'css/view-followers-style.css' %}" />
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
+    <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
+    <script src="{% static 'js/explore.js' %}"></script> -->
     <title>Document</title>
 </head>
 
