--- a/templates/instagramapp/profile.html
+++ b/templates/instagramapp/profile.html
@@ -36,13 +36,14 @@
                 </div>
             </div>
             <div class="name">
-                {{ user_name }}
+                {{ name }}
             </div>
         </div>
     </div>
 </section>
-<hr>
+
 <section class="my-post">
+    <hr>
     <div class="container">
         {% for posts in my_posts %}
         <div class="item">
